--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,54 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content  >
+  <div class="bg-img">
+    <!-- avatar-->
+    <ion-avatar class="avatars">
+      <!-- call for the img-->
+      <img  src="../../assets/lock2.jpg">
+    </ion-avatar>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <div class="divlogin ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-item class="item-background-color">
+      <!-- <ion-icon style="margin-top: 50px;" name="mail" slot="start"></ion-icon>
+      -->
+        <ion-label position="floating" class="labellogin">Email</ion-label>
+      <ion-input type="email" autoFocus [(ngModel)]="email"></ion-input>
+    </ion-item>
+    <!-- if user enter empty filed will show this msg "This field is required" -->
+<!-- ------------------------------------- -->
+    <ion-item class="item-background-color" *ngIf= "email?.length === 0" lines="none">
+      <ion-label>
+        <ion-text color=danger>This field is required</ion-text>
+      </ion-label>
+    </ion-item>
+<!-- ------------------------------------- -->
+
+    <ion-item class="item-background-color">
+  <!--  <ion-icon style="margin-top: 50px;" name="lock-closed" slot="start"></ion-icon>
+-->
+      <ion-label position="floating" class="labellogin" >Passowrd</ion-label>
+      <ion-input type="password" [(ngModel)]="password"></ion-input>
+    </ion-item>
+
+    <ion-item class="item-background-color" *ngIf= "password?.length === 0" lines="none">
+      <ion-label>
+        <ion-text color=danger>This field is required</ion-text>
+      </ion-label>
+    </ion-item>
+
+    <div class="divlogin">
+      <!-- we use routerLink to navigate between pages -->
+    <ion-button class="btnlogin" expand="block">Sign In</ion-button>
+    <ion-button class="btninscri"  routerLink="/register">Register</ion-button>
+    <ion-button class="btnforget" routerLink="/forget-password">Forgot Password</ion-button>
+
+  </div>
+  </div>
+
+
+
+
+
+
   </div>
 </ion-content>
